--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>menu items</title>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.7/handlebars.min.js"></script>
 
 
       
@@ -89,3 +90,4 @@
 
 
     </body></html>
+
